--- a/msms.client/index.html
+++ b/msms.client/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
+    <link
+      rel="stylesheet"
+      as="style"
+      onload="this.rel='stylesheet'"
+      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
+    />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
     <title>MSMS: Moderately Simple Music Syndication zzz</title>
