--- a/msms.client/index.html
+++ b/msms.client/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
-    <link
-      rel="stylesheet"
-      as="style"
-      onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
-    />
+    <meta property="og:title" content="Lineup - Playlist Manager: Music updates made easy" />
+    <meta property="og:description" content="Create lists of your favourite artists. Lineup will maintain a playlist of their newest releases for you, so you never miss out." />
+    <meta property="og:image" content="/ogpreviewimg.png" />
+    <meta property="og:type" content="website" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
+    <link rel="stylesheet"
+          as="style"
+          onload="this.rel='stylesheet'"
+          href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800" />
     <link rel="icon" type="image/svg+xml" href="/msms.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lineup - Spotify Playlist generation</title>
-  </head>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
