--- a/msms.client/index.html
+++ b/msms.client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta property="og:title" content="Lineup - Playlist Manager: Music updates made easy" />
     <meta property="og:description" content="Create lists of your favourite artists. Lineup will maintain a playlist of their newest releases for you, so you never miss out." />
-    <meta property="og:image" content="/ogpreviewimg.png" />
+    <meta property="og:image" content="https://trylineup.tech/ogpreviewimg.png" />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link rel="stylesheet"
